# gebalalang

./: .gitmodules  a.py  compiler.py  grammmar.txt  instructions.txt  readme.md
gbc/: .gitignore  Cargo.toml
gbc/src/: asm.rs  ast.rs  ast_optimize.rs  ast_validate.rs  cli.rs  code_builder.rs  code_gen.rs  error.rs  ir.rs  ir_optimize.rs  main.rs  message.rs  program.rs  targets.rs
gbc/src/ast/: ast.rs  ast_optimizer.rs  ast_validate.rs  mod.rs
gbc/src/ast_optimize/: normalize.rs
gbc/src/ast_validate/: no_invalid_accesses.rs  no_recursion.rs
gbc/src/code_builder/: code_builder.rs  code_builder.rs.old  memory.rs  mod.rs
gbc/src/code_gen/: code_gen.rs  ir.rs  ir_generator.rs  ir_tac_ify.rs  memory.rs
gbc/src/ir_optimize/: common_subexpression.rs  constant_folding.rs  copy_propagation.rs  dead_code_elemination.rs  strength_reduction.rs
gbc/src/targets/: gvm.rs  mod.rs  python.rs  x86_64_linux_unknown.rs
gbc/src/targets/gvm/: assembler.rs  builtins.rs  compiler.rs  gvm_ext.rs  gvme_optimizer.rs  memory.rs
gbc/src/tests/: a.rs
gbc/tree-sitter-gebalalang/: CMakeLists.txt  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  tree-sitter.json
gbc/tree-sitter-gebalalang/bindings/go/: binding.go
gbc/tree-sitter-gebalalang/bindings/node/: binding.cc
gbc/tree-sitter-gebalalang/bindings/rust/: build.rs  lib.rs
gbc/tree-sitter-gebalalang/src/: grammar.json  node-types.json  parser.c
gembalalangc/: Cargo.toml  a.mr  mem.txt  test.sh
gembalalangc/src/: ast_validate.rs  cli.rs  code_builder.rs  error.rs  main.rs
(+46 files in other folders)
