[package]
name = "gbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
serde = { version =   "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tree-sitter = "0.24.4"
tree-sitter-gbl = { path = "./tree-sitter-gebalalang/" }