[package]
name = "gembalalangc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
tree-sitter = "0.24.4"
tree-sitter-gbl = { path = "../tree-sitter-gebalalang/" }

[target.x86_64-unknown-linux-gnu.foo]
rustc-flags = "-l ../tree-sitter-gebalalang/gebalalang.so"
